--- a/function.ipynb
+++ b/function.ipynb
@@ -20,66 +20,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
    "source": [
     "#Define the function \"say_hello\" so it prints \"Hello!\" when called. \n",
     "\n",
-    "def Beah():\n",
-    "    print(\"But you a beah!\")"
+    "def say_something(something):\n",
+    "    print(something)\n",
+    "    \n",
+    "say_something('hi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Formatting!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "But you a beah!\n"
+      "92\n",
+      "87\n",
+      "79\n",
+      "99\n"
      ]
     }
    ],
    "source": [
-    "Beah()"
+    "# using the format() function:\n",
+    "my_grades=[92.34,86.54,78.92,99.37]\n",
+    "\n",
+    "for grade in my_grades:\n",
+    "    print(\"{:.0f}\".format(grade))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Beah(x):\n",
-    "    print('But noooooooooooo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "But noooooooooooo\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    92\n",
+       "1    87\n",
+       "2    79\n",
+       "3    99\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Beah('Oah')"
+    "#Link map() and format() functions:\n",
+    "my_grades=pd.Series(my_grades)\n",
+    "my_grades\n",
+    "\n",
+    "#format the grades to the nearest whole number percent:\n",
+    "my_grades.map(\"{:.0f}\".format)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
